# VaultLens

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  WIKI.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/rules/: my-vault.mdc
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cloud/: Dockerfile  README.md  browser-worker.Dockerfile  cleanup_aws_resources.py  deploy_telegram_webhook.sh  invoke_browser_worker.sh  lambda_bridge.py  node_lambda_wrapper.js  sync_codex_auth_to_s3.sh  sync_state_to_s3.sh  telegram_webhook_lambda.py  template.yaml
hooks/: README.md  hooks.json
templates/: decision-template.md  item-template.md  job-template.md  project-template.md  system-template.md  thought-template.md  topic-template.md
tools/: artifact_context.py  codex_agent_runner.py  enrich_live_metadata.py  enrich_with_browser.mjs  ingest_chat_export.py  ingest_whatsapp_inbox.py  rebuild_dashboards.py  telegram_calendar_agent.mjs  telegram_codex_agent.mjs  telegram_delivery_queue.py  telegram_inbox.py  telegram_vault_query.mjs  test_vault_infra.py  vault_compile_cache.py  vault_dream.py  vault_dream_agent.mjs  vault_events.py  vault_health.py  vault_heartbeat.py  vault_morning_brief_agent.mjs  vault_query_server.mjs  vault_search.py  vault_session_memory.py  vault_tasks.py  vault_trajectory.py  x_content.py
web/: app.css  app.js  index.html
(+7 files in other folders)
