[project]
name = "vault-lens"
version = "1.0.0"
description = "Self-hosted, agent-maintained markdown knowledge base for personal capture, retrieval, surfacing, and decisions."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.14.3,<5",
  "boto3>=1.43.22,<2",
  "PyYAML>=6.0.3,<7",
  "requests>=2.34.2,<3",
]

[project.optional-dependencies]
codex = [
  "openai-codex>=0.1.0b2",
]

[tool.uv]
package = false
